--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="icon" type="image/png" href="favicon.png" ; />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="csi.min.js"></script>
+        <script data-ad-client="ca-pub-6192312197226967" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
   </head>
   <body>
     <div class="loader-div" id="loaderDiv" onload="checkForTop();">
@@ -54,6 +56,20 @@
     </div>
 
     <div id="wrapper" class="wrapper">
+
+<div class="sense">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6192312197226967"
+     data-ad-slot="3073690633"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
       <div class="sidebar-container" id="sidebar">
         <div data-include="sidebar.html"></div>
       </div>
@@ -111,6 +127,20 @@
 
         <div class="game-tiles game-tiles1 showTiles" id="game-tiles"></div>
       </div>
+
+<div class="sense-bottom">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Vertical ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6192312197226967"
+     data-ad-slot="3073690633"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 
       <div class="links">
         <p class="links__text">Try our other TEFL Sport games.</p>
